Feat: I created service for the PropertyType. Update: I made the email unique, because i will use it for the authentication together with the password.